--- a/src/ru/index.html
+++ b/src/ru/index.html
@@ -326,7 +326,7 @@
         loop
         muted
         autoplay
-        poster="../img/index/banner.webp"
+        poster="../img/index/start.webp"
         class="fullscreen-bg__video">
         <source src="../video/video.ogv" type="video/ogg" />
         <source src="../video/video.mp4" type="video/mp4" />
