карусель в отдельный файл

--- a/src/ru/avtomaty.html
+++ b/src/ru/avtomaty.html
@@ -312,7 +312,7 @@
         <li class="breadcrumb-item active" aria-current="page">Кофемашины автомат</li>
       </ol>
     </nav>
-    <div class="d-flex justify-content-center separator">
+    <div class="d-flex justify-content-center separator p-1">
       <h1>Зерновые кофемашины в аренду</h1>
     </div>
     <!-- /////////////////////////////////////////   Banner    ////////////////////////////////////////     -->
@@ -1298,7 +1298,7 @@
           </div>
         </div>
       </div>
-      <div class="d-flex justify-content-center separator">
+      <div class="d-flex justify-content-center separator p-1">
         <h6><small>© 2016-2024 Bianchi professional</small></h6>
       </div>
     </footer>
