--- a/src/ru/privacy_policy.html
+++ b/src/ru/privacy_policy.html
@@ -656,7 +656,7 @@
           </div>
         </div>
       </div>
-      <div class="d-flex justify-content-center separator">
+      <div class="d-flex justify-content-center separator p-1">
         <h6><small>© 2016-2024 Bianchi professional</small></h6>
       </div>
     </footer>
