--- a/src/arenda.html
+++ b/src/arenda.html
@@ -308,7 +308,7 @@
         <li class="breadcrumb-item active" aria-current="page">Оренда кавомашин</li>
       </ol>
     </nav>
-    <div class="d-flex justify-content-center separator">
+    <div class="d-flex justify-content-center separator p-1">
       <h1>Оренда кавових машин</h1>
     </div>
     <!-- /////////////////////////////////////////   Banner    ////////////////////////////////////////     -->
@@ -418,7 +418,10 @@
       </div>
     </div>
     <div class="container">
-      <div class="row">
+      <div class="row d-flex flex-row-reverse">
+        <div class="col-lg-6">
+          <img src="./img/arenda/slide3.webp" class="p-3 img-fluid" alt="оренда кавомашини вінниця" />
+        </div>
         <div class="col-lg-6 px-4">
           <a class="blacklink fw-medium fs-5 lh-lg" href="./dlya_ofisov.html">
             Кавомашина в офіс
@@ -435,12 +438,6 @@
             купівлю дорогого обладнання, включає повне обслуговування та ремонт,
             можливість легкої зміни обладнання, якщо з'являться нові вимоги.
           </p>
-        </div>
-        <div class="col-lg-6">
-          <img
-            src="./img/arenda/slide3.webp"
-            class="p-3 img-fluid"
-            alt="оренда кавомашини вінниця" />
         </div>
       </div>
     </div>
@@ -471,7 +468,7 @@
         </div>
       </div>
     </div>
-    <div class="d-flex justify-content-center separator">
+    <div class="d-flex justify-content-center separator p-1">
       <h3>Що потрібно для співпраці</h3>
     </div>
     <div class="container timeline">
@@ -1802,7 +1799,7 @@
           </div>
         </div>
       </div>
-      <div class="d-flex justify-content-center separator">
+      <div class="d-flex justify-content-center separator p-1">
         <h6><small>© 2016-2024 Bianchi professional</small></h6>
       </div>
     </footer>
@@ -1893,38 +1890,5 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.7.1/dist/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
-    <script>
-      $(document).ready(function () {
-        $(".slider").slick({
-          arrows: true,
-          slidesToShow: 4,
-          speed: 1000,
-          easing: "linear",
-          autoplay: true,
-          centerMode: false,
-          variableWidth: false,
-          responsive: [
-            {
-              breakpoint: 1220,
-              settings: {
-                slidesToShow: 3,
-              },
-            },
-            {
-              breakpoint: 978,
-              settings: {
-                slidesToShow: 2,
-              },
-            },
-            {
-              breakpoint: 560,
-              settings: {
-                slidesToShow: 1,
-              },
-            },
-          ],
-        });
-      });
-    </script>
   </body>
 </html>
