--- a/src/dlya_ofisov.html
+++ b/src/dlya_ofisov.html
@@ -312,7 +312,7 @@
         <li class="breadcrumb-item active" aria-current="page">Для офісу</li>
       </ol>
     </nav>
-    <div class="d-flex justify-content-center separator">
+    <div class="d-flex justify-content-center separator p-1">
       <h1>Кавомашина в офіс</h1>
     </div>
     <!-- /////////////////////////////////////////   Banner    ////////////////////////////////////////     -->
@@ -532,7 +532,7 @@
       </div>
     </div>
     <!-- /////////////////////////////////////////   Timeline    ////////////////////////////////////////     -->
-    <div class="d-flex justify-content-center separator">
+    <div class="d-flex justify-content-center separator p-1">
       <h3>Що потрібно для співпраці</h3>
     </div>
     <div class="container timeline">
@@ -822,7 +822,7 @@
           </div>
         </div>
       </div>
-      <div class="d-flex justify-content-center separator">
+      <div class="d-flex justify-content-center separator p-1">
         <h6><small>© 2016-2024 Bianchi professional</small></h6>
       </div>
     </footer>
@@ -912,38 +912,5 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.7.1/dist/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
-    <script>
-      $(document).ready(function () {
-        $(".slider").slick({
-          arrows: true,
-          slidesToShow: 4,
-          speed: 1000,
-          easing: "linear",
-          autoplay: true,
-          centerMode: false,
-          variableWidth: false,
-          responsive: [
-            {
-              breakpoint: 1220,
-              settings: {
-                slidesToShow: 3,
-              },
-            },
-            {
-              breakpoint: 978,
-              settings: {
-                slidesToShow: 2,
-              },
-            },
-            {
-              breakpoint: 560,
-              settings: {
-                slidesToShow: 1,
-              },
-            },
-          ],
-        });
-      });
-    </script>
   </body>
 </html>
