--- a/src/index.html
+++ b/src/index.html
@@ -471,7 +471,7 @@
       </div>
     </div>
     <!-- /////////////////////////////////////////   Timeline    ////////////////////////////////////////     -->
-    <div class="d-flex justify-content-center separator">
+    <div class="d-flex justify-content-center separator p-1">
       <h3>Що потрібно для співпраці</h3>
     </div>
     <div class="container timeline">
@@ -643,7 +643,7 @@
     </section>
 
     <!-- /////////////////////////////////////////   Partners    ////////////////////////////////////////     -->
-    <div class="d-flex justify-content-center separator">
+    <div class="d-flex justify-content-center separator p-1">
       <h3>НАШІ ПАРТНЕРИ</h3>
     </div>
     <div class="container text-center partners mb-4">
@@ -919,7 +919,7 @@
           </div>
         </div>
       </div>
-      <div class="d-flex justify-content-center separator">
+      <div class="d-flex justify-content-center separator p-1">
         <h6><small>© 2016-2024 Bianchi professional</small></h6>
       </div>
     </footer>
@@ -1009,38 +1009,5 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.7.1/dist/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
-    <script>
-      $(document).ready(function () {
-        $(".slider").slick({
-          arrows: true,
-          slidesToShow: 4,
-          speed: 1000,
-          easing: "linear",
-          autoplay: true,
-          centerMode: false,
-          variableWidth: false,
-          responsive: [
-            {
-              breakpoint: 1220,
-              settings: {
-                slidesToShow: 3,
-              },
-            },
-            {
-              breakpoint: 978,
-              settings: {
-                slidesToShow: 2,
-              },
-            },
-            {
-              breakpoint: 560,
-              settings: {
-                slidesToShow: 1,
-              },
-            },
-          ],
-        });
-      });
-    </script>
   </body>
 </html>
