--- a/src/kofemolki.html
+++ b/src/kofemolki.html
@@ -304,7 +304,7 @@
       </div>
     </nav>
     <!-- /////////////////////////////////////////   Banner    ////////////////////////////////////////     -->
-    <div class="d-flex justify-content-center separator">
+    <div class="d-flex justify-content-center separator p-1">
       <h3>Професійні кавомолки</h3>
     </div>
     <div class="description container">
@@ -635,7 +635,7 @@
           </div>
         </div>
       </div>
-      <div class="d-flex justify-content-center separator">
+      <div class="d-flex justify-content-center separator p-1">
         <h6><small>© 2016-2024 Bianchi professional</small></h6>
       </div>
     </footer>
