--- a/src/moloko_shokolad.html
+++ b/src/moloko_shokolad.html
@@ -308,7 +308,7 @@
         <li class="breadcrumb-item active" aria-current="page">Гарячі напої</li>
       </ol>
     </nav>
-    <div class="d-flex justify-content-center separator">
+    <div class="d-flex justify-content-center separator p-1">
       <h1>Капучино, молоко, шоколад</h1>
     </div>
     <!-- /////////////////////////////////////////   Banner    ////////////////////////////////////////     -->
@@ -661,7 +661,7 @@
           </div>
         </div>
       </div>
-      <div class="d-flex justify-content-center separator">
+      <div class="d-flex justify-content-center separator p-1">
         <h6><small>© 2016-2024 Bianchi professional</small></h6>
       </div>
     </footer>
