--- a/src/rashodniki.html
+++ b/src/rashodniki.html
@@ -307,7 +307,7 @@
         <li class="breadcrumb-item active" aria-current="page">Розхідні матеріали</li>
       </ol>
     </nav>
-    <div class="d-flex justify-content-center separator">
+    <div class="d-flex justify-content-center separator p-1">
       <h1>Розхідні матеріали</h1>
     </div>
     <!-- /////////////////////////////////////////   Goods    ////////////////////////////////////////     -->
@@ -638,7 +638,7 @@
           </div>
         </div>
       </div>
-      <div class="d-flex justify-content-center separator">
+      <div class="d-flex justify-content-center separator p-1">
         <h6><small>© 2016-2024 Bianchi professional</small></h6>
       </div>
     </footer>
