--- a/src/ru/arenda.html
+++ b/src/ru/arenda.html
@@ -315,7 +315,7 @@
         <li class="breadcrumb-item active" aria-current="page">Аренда кофемашин</li>
       </ol>
     </nav>
-    <div class="d-flex justify-content-center separator">
+    <div class="d-flex justify-content-center separator p-1">
       <h1>Аренда кофемашин</h1>
     </div>
     <!-- /////////////////////////////////////////   Banner    ////////////////////////////////////////     -->
@@ -424,7 +424,10 @@
       </div>
     </div>
     <div class="container">
-      <div class="row">
+      <div class="row d-flex flex-row-reverse">
+        <div class="col-lg-6">
+          <img src="../img/arenda/slide3.webp" class="p-3 img-fluid" alt="кофе в офис с арендой кофемашины" />
+        </div>
         <div class="col-lg-6 px-4">
           <a class="blacklink fw-medium fs-5 lh-lg" href="./dlya_ofisov.html">
             Кофемашина для офиса в аренду
@@ -441,12 +444,6 @@
             покупку дорогостоящего оборудования, включает полное обслуживание и ремонт,
             возможность легкой смены оборудования, если появятся новые требования.
           </p>
-        </div>
-        <div class="col-lg-6">
-          <img
-            src="../img/arenda/slide3.webp"
-            class="p-3 img-fluid"
-            alt="кофе в офис с арендой кофемашины" />
         </div>
       </div>
     </div>
@@ -477,7 +474,7 @@
         </div>
       </div>
     </div>
-    <div class="d-flex justify-content-center separator">
+    <div class="d-flex justify-content-center separator p-1">
       <h3>Что нужно для сотрудничества</h3>
     </div>
     <div class="container timeline">
@@ -1811,7 +1808,7 @@
           </div>
         </div>
       </div>
-      <div class="d-flex justify-content-center separator">
+      <div class="d-flex justify-content-center separator p-1">
         <h6><small>© 2016-2024 Bianchi professional</small></h6>
       </div>
     </footer>
@@ -1902,38 +1899,5 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.7.1/dist/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
-    <script>
-      $(document).ready(function () {
-        $(".slider").slick({
-          arrows: true,
-          slidesToShow: 4,
-          speed: 1000,
-          easing: "linear",
-          autoplay: true,
-          centerMode: false,
-          variableWidth: false,
-          responsive: [
-            {
-              breakpoint: 1220,
-              settings: {
-                slidesToShow: 3,
-              },
-            },
-            {
-              breakpoint: 978,
-              settings: {
-                slidesToShow: 2,
-              },
-            },
-            {
-              breakpoint: 560,
-              settings: {
-                slidesToShow: 1,
-              },
-            },
-          ],
-        });
-      });
-    </script>
   </body>
 </html>
