--- a/src/ru/rashodniki.html
+++ b/src/ru/rashodniki.html
@@ -312,7 +312,7 @@
         <li class="breadcrumb-item active" aria-current="page">Расходные материалы</li>
       </ol>
     </nav>
-    <div class="d-flex justify-content-center separator">
+    <div class="d-flex justify-content-center separator p-1">
       <h1>Расходные материалы</h1>
     </div>
     <!-- /////////////////////////////////////////   Goods    ////////////////////////////////////////     -->
@@ -641,7 +641,7 @@
           </div>
         </div>
       </div>
-      <div class="d-flex justify-content-center separator">
+      <div class="d-flex justify-content-center separator p-1">
         <h6><small>© 2016-2024 Bianchi professional</small></h6>
       </div>
     </footer>
