--- a/src/ru/syropi.html
+++ b/src/ru/syropi.html
@@ -309,7 +309,7 @@
         <li class="breadcrumb-item active" aria-current="page">Сиропы к кофе</li>
       </ol>
     </nav>
-    <div class="d-flex justify-content-center separator">
+    <div class="d-flex justify-content-center separator p-1">
       <h3>Сиропы для кофе</h3>
     </div>
     <!-- /////////////////////////////////////////   Banner    ////////////////////////////////////////     -->
@@ -1826,7 +1826,7 @@
           </div>
         </div>
       </div>
-      <div class="d-flex justify-content-center separator">
+      <div class="d-flex justify-content-center separator p-1">
         <h6><small>© 2016-2024 Bianchi professional</small></h6>
       </div>
     </footer>
