--- a/src/ru/vending.html
+++ b/src/ru/vending.html
@@ -310,7 +310,7 @@
         <li class="breadcrumb-item active" aria-current="page">Вендинг</li>
       </ol>
     </nav>
-    <div class="d-flex justify-content-center separator">
+    <div class="d-flex justify-content-center separator p-1">
       <h1>Установка вендинговых автоматов с кофе и снеками</h2>
     </div>
     <!-- /////////////////////////////////////////   Banner    ////////////////////////////////////////     -->
@@ -384,7 +384,7 @@
       </div>
     </section>
     <!-- /////////////////////////////////////////   Magazin    ////////////////////////////////////////     -->
-    <div class="d-flex justify-content-center separator">
+    <div class="d-flex justify-content-center separator p-1">
       <h3>Услуги</h3>
     </div>
     <div class="magazine container">
@@ -441,7 +441,7 @@
         </div>
       </div>
     </div>
-    <div class="d-flex justify-content-center separator">
+    <div class="d-flex justify-content-center separator p-1">
       <h3>Что нужно для установки кофемашины</h3>
     </div>
     <div class="container timeline">
@@ -523,7 +523,7 @@
       </button>
     </div>
     <!-- /////////////////////////////////////////   Equipment    ////////////////////////////////////////     -->
-    <div class="d-flex justify-content-center separator">
+    <div class="d-flex justify-content-center separator p-1">
       <h3>Оборудование</h3>
     </div>
     <div class="container carousel-wrapper">
@@ -647,7 +647,7 @@
     </div>
     <!-- /////////////////////////////////////////   Partners    ////////////////////////////////////////     -->
     <div class="partners-wrapper">
-      <div class="d-flex justify-content-center separator">
+      <div class="d-flex justify-content-center separator p-1">
         <h3>Наши партнёры</h3>
       </div>
       <div class="container text-center partners mb-4">
@@ -827,7 +827,7 @@
           </div>
         </div>
       </div>
-      <div class="d-flex justify-content-center separator">
+      <div class="d-flex justify-content-center separator p-1">
         <h6><small>© 2016-2024 Bianchi professional</small></h6>
       </div>
     </footer>
