--- a/src/ru/vending_avtomaty.html
+++ b/src/ru/vending_avtomaty.html
@@ -274,7 +274,7 @@
         </ol>
       </nav>
     <!-- /////////////////////////////////////////   Banner    ////////////////////////////////////////     -->
-    <div class="d-flex justify-content-center separator">
+    <div class="d-flex justify-content-center separator p-1">
         <h1>Вендинговые автоматы кофе</h1>
     </div>
     <div class="description container">
@@ -776,7 +776,7 @@
                 </div>
             </div>
         </div>
-        <div class="d-flex justify-content-center separator">
+        <div class="d-flex justify-content-center separator p-1">
             <h6><small>© 2016-2024 Bianchi professional</small></h6>
         </div>
     </footer>
