--- a/src/ru/vending_snack.html
+++ b/src/ru/vending_snack.html
@@ -314,7 +314,7 @@
       </ol>
     </nav>
     <!-- /////////////////////////////////////////   Banner    ////////////////////////////////////////     -->
-    <div class="d-flex justify-content-center separator">
+    <div class="d-flex justify-content-center separator p-1">
       <h1>Вендинговые снековые автоматы</h1>
     </div>
     <div class="description container">
@@ -717,7 +717,7 @@
           </div>
         </div>
       </div>
-      <div class="d-flex justify-content-center separator">
+      <div class="d-flex justify-content-center separator p-1">
         <h6><small>© 2016-2024 Bianchi professional</small></h6>
       </div>
     </footer>
