--- a/src/ru/zernovoy_kofe.html
+++ b/src/ru/zernovoy_kofe.html
@@ -312,7 +312,7 @@
         <li class="breadcrumb-item active" aria-current="page">Зерновой кофе</li>
       </ol>
     </nav>
-    <div class="d-flex justify-content-center separator">
+    <div class="d-flex justify-content-center separator p-1">
       <h1>Кофе зерновой для кофемашины</h1>
     </div>
     <!-- /////////////////////////////////////////   Banner    ////////////////////////////////////////     -->
@@ -631,7 +631,7 @@
           </div>
         </div>
       </div>
-      <div class="d-flex justify-content-center separator">
+      <div class="d-flex justify-content-center separator p-1">
         <h6><small>© 2016-2024 Bianchi professional</small></h6>
       </div>
     </footer>
