--- a/src/vending.html
+++ b/src/vending.html
@@ -309,7 +309,7 @@
         <li class="breadcrumb-item active" aria-current="page">Вендінг</li>
       </ol>
     </nav>
-    <div class="d-flex justify-content-center separator">
+    <div class="d-flex justify-content-center separator p-1">
       <h1>Встановлення кавових та снекових вендінгових апаратів</h1>
     </div>
     <!-- /////////////////////////////////////////   Banner    ////////////////////////////////////////     -->
@@ -385,7 +385,7 @@
       </div>
     </section>
     <!-- /////////////////////////////////////////   Magazin    ////////////////////////////////////////     -->
-    <div class="d-flex justify-content-center separator">
+    <div class="d-flex justify-content-center separator p-1">
       <h3>Послуги</h3>
     </div>
     <div class="magazine container">
@@ -443,7 +443,7 @@
         </div>
       </div>
     </div>
-    <div class="d-flex justify-content-center separator">
+    <div class="d-flex justify-content-center separator p-1">
       <h3>Що потрібно для встановлення кавомашини</h3>
     </div>
     <div class="container timeline">
@@ -524,7 +524,7 @@
       </button>
     </div>
     <!-- /////////////////////////////////////////   Equipment    ////////////////////////////////////////     -->
-    <div class="d-flex justify-content-center separator">
+    <div class="d-flex justify-content-center separator p-1">
       <h3>Обладнання</h3>
     </div>
     <div class="container carousel-wrapper">
@@ -648,7 +648,7 @@
     </div>
     <!-- /////////////////////////////////////////   Partners    ////////////////////////////////////////     -->
     <div class="partners-wrapper">
-      <div class="d-flex justify-content-center separator">
+      <div class="d-flex justify-content-center separator p-1">
         <h3>Наші партнери</h3>
       </div>
       <div class="container text-center partners mb-4">
@@ -829,7 +829,7 @@
           </div>
         </div>
       </div>
-      <div class="d-flex justify-content-center separator">
+      <div class="d-flex justify-content-center separator p-1">
         <h6><small>© 2016-2024 Bianchi professional</small></h6>
       </div>
     </footer>
