--- a/src/vending_avtomaty.html
+++ b/src/vending_avtomaty.html
@@ -312,7 +312,7 @@
       </ol>
     </nav>
     <!-- /////////////////////////////////////////   Banner    ////////////////////////////////////////     -->
-    <div class="d-flex justify-content-center separator">
+    <div class="d-flex justify-content-center separator p-1">
       <h1>Вендінгові апарати для кави та гарячих напоїв</h1>
     </div>
     <div class="description container">
@@ -1129,7 +1129,7 @@
           </div>
         </div>
       </div>
-      <div class="d-flex justify-content-center separator">
+      <div class="d-flex justify-content-center separator p-1">
         <h6><small>© 2016-2024 Bianchi professional</small></h6>
       </div>
     </footer>
