--- a/src/zernovoy_kofe.html
+++ b/src/zernovoy_kofe.html
@@ -310,7 +310,7 @@
         <li class="breadcrumb-item active" aria-current="page">Зернова кава</li>
       </ol>
     </nav>
-    <div class="d-flex justify-content-center separator">
+    <div class="d-flex justify-content-center separator p-1">
       <h1>Зернова кава</h1>
     </div>
     <!-- /////////////////////////////////////////   Banner    ////////////////////////////////////////     -->
@@ -628,7 +628,7 @@
           </div>
         </div>
       </div>
-      <div class="d-flex justify-content-center separator">
+      <div class="d-flex justify-content-center separator p-1">
         <h6><small>© 2016-2024 Bianchi professional</small></h6>
       </div>
     </footer>
