исправлено отображение карточек в мобильной версии

--- a/src/dlya_ofisov.html
+++ b/src/dlya_ofisov.html
@@ -331,7 +331,7 @@
       <h5 class="text-center">ВИГОДИ ОРЕНДИ КАВОВОГО АПАРАТУ ДЛЯ ОФІСУ</h5>
       <div class="container cards">
         <div class="row gy-1">
-          <div class="col">
+          <div class="col-sm-12 col-md-6 col-lg-3">
             <div class="card text-center" style="width: auto">
               <img src="./img/dlya_ofisov/icon.webp" class="card-img-top" alt="icon" />
               <div class="card-body">
@@ -343,7 +343,7 @@
               </div>
             </div>
           </div>
-          <div class="col">
+          <div class="col-sm-12 col-md-6 col-lg-3">
             <div class="card text-center" style="width: auto">
               <img src="./img/dlya_ofisov/icon.webp" class="card-img-top" alt="icon" />
               <div class="card-body">
@@ -355,7 +355,7 @@
               </div>
             </div>
           </div>
-          <div class="col">
+          <div class="col-sm-12 col-md-6 col-lg-3">
             <div class="card text-center" style="width: auto">
               <img src="./img/dlya_ofisov/icon.webp" class="card-img-top" alt="icon" />
               <div class="card-body">
@@ -367,7 +367,7 @@
               </div>
             </div>
           </div>
-          <div class="col">
+          <div class="col-sm-12 col-md-6 col-lg-3">
             <div class="card text-center" style="width: auto">
               <img src="./img/dlya_ofisov/icon.webp" class="card-img-top" alt="icon" />
               <div class="card-body">
