--- a/src/ru/dlya_ofisov.html
+++ b/src/ru/dlya_ofisov.html
@@ -333,7 +333,7 @@
       <h5 class="text-center">ВЫГОДЫ АРЕНДЫ КОФЕЙНОГО АППАРАТА ДЛЯ ОФИСА</h5>
       <div class="container cards">
         <div class="row gy-1">
-          <div class="col">
+          <div class="col-sm-12 col-md-6 col-lg-3">
             <div class="card text-center" style="width: auto">
               <img src="../img/dlya_ofisov/icon.webp" class="card-img-top" alt="icon" />
               <div class="card-body">
@@ -345,7 +345,7 @@
               </div>
             </div>
           </div>
-          <div class="col">
+          <div class="col-sm-12 col-md-6 col-lg-3">
             <div class="card text-center" style="width: auto">
               <img src="../img/dlya_ofisov/icon.webp" class="card-img-top" alt="icon" />
               <div class="card-body">
@@ -357,7 +357,7 @@
               </div>
             </div>
           </div>
-          <div class="col">
+          <div class="col-sm-12 col-md-6 col-lg-3">
             <div class="card text-center" style="width: auto">
               <img src="../img/dlya_ofisov/icon.webp" class="card-img-top" alt="icon" />
               <div class="card-body">
@@ -369,7 +369,7 @@
               </div>
             </div>
           </div>
-          <div class="col">
+          <div class="col-sm-12 col-md-6 col-lg-3">
             <div class="card text-center" style="width: auto">
               <img src="../img/dlya_ofisov/icon.webp" class="card-img-top" alt="icon" />
               <div class="card-body">
