--- a/src/dlya_azs.html
+++ b/src/dlya_azs.html
@@ -326,7 +326,7 @@
       <h5 class="text-center">ВИГОДИ ОРЕНДИ КАВОВОГО АПАРАТУ ДЛЯ АЗС</h5>
       <div class="container cards">
         <div class="row gy-1">
-          <div class="col">
+          <div class="col-sm-12 col-md-6 col-lg-3">
             <div class="card text-center" style="width: auto">
               <img src="./img/dlya_azs/icon.webp" class="card-img-top" alt="icon" />
               <div class="card-body">
@@ -338,7 +338,7 @@
               </div>
             </div>
           </div>
-          <div class="col">
+          <div class="col-sm-12 col-md-6 col-lg-3">
             <div class="card text-center" style="width: auto">
               <img src="./img/dlya_azs/icon.webp" class="card-img-top" alt="icon" />
               <div class="card-body">
@@ -350,7 +350,7 @@
               </div>
             </div>
           </div>
-          <div class="col">
+          <div class="col-sm-12 col-md-6 col-lg-3">
             <div class="card text-center" style="width: auto">
               <img src="./img/dlya_azs/icon.webp" class="card-img-top" alt="icon" />
               <div class="card-body">
@@ -362,7 +362,7 @@
               </div>
             </div>
           </div>
-          <div class="col">
+          <div class="col-sm-12 col-md-6 col-lg-3">
             <div class="card text-center" style="width: auto">
               <img src="./img/dlya_azs/icon.webp" class="card-img-top" alt="icon" />
               <div class="card-body">
