--- a/src/dlya_magazinov_i_setey.html
+++ b/src/dlya_magazinov_i_setey.html
@@ -332,7 +332,7 @@
       <h5 class="text-center">ВИГОДИ ОРЕНДИ КАВОВОГО ОБЛАДНАННЯ ДЛЯ МАГАЗИНУ</h5>
       <div class="container cards">
         <div class="row gy-1">
-          <div class="col">
+          <div class="col-sm-12 col-md-6 col-lg-3">
             <div class="card text-center" style="width: auto">
               <img
                 src="./img/dlya_magazinov_i_setey/icon.webp"
@@ -347,7 +347,7 @@
               </div>
             </div>
           </div>
-          <div class="col">
+          <div class="col-sm-12 col-md-6 col-lg-3">
             <div class="card text-center" style="width: auto">
               <img
                 src="./img/dlya_magazinov_i_setey/icon.webp"
@@ -361,7 +361,7 @@
               </div>
             </div>
           </div>
-          <div class="col">
+          <div class="col-sm-12 col-md-6 col-lg-3">
             <div class="card text-center" style="width: auto">
               <img
                 src="./img/dlya_magazinov_i_setey/icon.webp"
@@ -380,7 +380,7 @@
               </div>
             </div>
           </div>
-          <div class="col">
+          <div class="col-sm-12 col-md-6 col-lg-3">
             <div class="card text-center" style="width: auto">
               <img
                 src="./img/dlya_magazinov_i_setey/icon.webp"
