--- a/src/ru/dlya_azs.html
+++ b/src/ru/dlya_azs.html
@@ -330,7 +330,7 @@
       <h5 class="text-center">ВЫГОДЫ АРЕНДЫ КОФЕЙНОГО АППАРАТА ДЛЯ АЗС</h5>
       <div class="container cards">
         <div class="row gy-1">
-          <div class="col">
+          <div class="col-sm-12 col-md-6 col-lg-3">
             <div class="card text-center" style="width: auto">
               <img src="../img/dlya_azs/icon.webp" class="card-img-top" alt="icon" />
               <div class="card-body">
@@ -342,7 +342,7 @@
               </div>
             </div>
           </div>
-          <div class="col">
+          <div class="col-sm-12 col-md-6 col-lg-3">
             <div class="card text-center" style="width: auto">
               <img src="../img/dlya_azs/icon.webp" class="card-img-top" alt="icon" />
               <div class="card-body">
@@ -354,7 +354,7 @@
               </div>
             </div>
           </div>
-          <div class="col">
+          <div class="col-sm-12 col-md-6 col-lg-3">
             <div class="card text-center" style="width: auto">
               <img src="../img/dlya_azs/icon.webp" class="card-img-top" alt="icon" />
               <div class="card-body">
@@ -366,7 +366,7 @@
               </div>
             </div>
           </div>
-          <div class="col">
+          <div class="col-sm-12 col-md-6 col-lg-3">
             <div class="card text-center" style="width: auto">
               <img src="../img/dlya_azs/icon.webp" class="card-img-top" alt="icon" />
               <div class="card-body">
