--- a/src/ru/dlya_magazinov_i_setey.html
+++ b/src/ru/dlya_magazinov_i_setey.html
@@ -338,7 +338,7 @@
       <h5 class="text-center">ВЫГОДЫ АРЕНДЫ КОФЕМАШИНЫ ДЛЯ МАГАЗИНА</h5>
       <div class="container cards">
         <div class="row gy-1">
-          <div class="col">
+          <div class="col-sm-12 col-md-6 col-lg-3">
             <div class="card text-center" style="width: auto">
               <img
                 src="../img/dlya_magazinov_i_setey/icon.webp"
@@ -353,7 +353,7 @@
               </div>
             </div>
           </div>
-          <div class="col">
+          <div class="col-sm-12 col-md-6 col-lg-3">
             <div class="card text-center" style="width: auto">
               <img
                 src="../img/dlya_magazinov_i_setey/icon.webp"
@@ -367,7 +367,7 @@
               </div>
             </div>
           </div>
-          <div class="col">
+          <div class="col-sm-12 col-md-6 col-lg-3">
             <div class="card text-center" style="width: auto">
               <img
                 src="../img/dlya_magazinov_i_setey/icon.webp"
@@ -386,7 +386,7 @@
               </div>
             </div>
           </div>
-          <div class="col">
+          <div class="col-sm-12 col-md-6 col-lg-3">
             <div class="card text-center" style="width: auto">
               <img
                 src="../img/dlya_magazinov_i_setey/icon.webp"
