--- a/src/avtomaty.html
+++ b/src/avtomaty.html
@@ -524,7 +524,7 @@
         </div>
       </div>
 
-      <div class="col col-auto col-sm-6 col-md-4 mb-1">
+      <div id="anhcor-gaia-style" class="col col-auto col-sm-6 col-md-4 mb-1">
         <div class="card hover-text-one">
           <figure class="effect-text-three">
             <img src="./img/avtomaty/GaiaStyle.webp" class="card-img-top" alt="автоматична кавомашина" />
@@ -566,7 +566,7 @@
             </figcaption>
           </figure>
           <div class="card-body">
-            <h3 id="anhcor-gaia-style" class="text-center">Кавомашина <br />Bianchi Gaia Style</h3>
+            <h3 class="text-center">Кавомашина <br />Bianchi Gaia Style</h3>
             <br />
             <small>
               <p class="lh-sm">
@@ -668,7 +668,7 @@
         </div>
       </div>
 
-      <div class="col col-auto col-sm-6 col-md-4 mb-1">
+      <div id="anhcor-korinto" class="col col-auto col-sm-6 col-md-4 mb-1">
         <div class="card hover-text-one">
           <figure class="effect-text-three">
             <img src="./img/avtomaty/necta_korinto.webp" class="card-img-top" alt="кавова машина для бізнесу" />
@@ -710,7 +710,7 @@
             </figcaption>
           </figure>
           <div class="card-body">
-            <h3 id="anhcor-korinto" class="text-center">Кавомашина <br />Necta Korinto Prime</h3>
+            <h3 class="text-center">Кавомашина <br />Necta Korinto Prime</h3>
             <br />
             <small>
               <p class="lh-sm">
