--- a/src/ru/avtomaty.html
+++ b/src/ru/avtomaty.html
@@ -551,7 +551,7 @@
           </div>
         </div>
       </div>
-      <div class="col col-auto col-sm-6 col-md-4 mb-1">
+      <div id="anhcor-gaia-style-ru" class="col col-auto col-sm-6 col-md-4 mb-1">
         <div class="card hover-text-one">
           <figure class="effect-text-three">
             <img src="../img/avtomaty/GaiaStyle.webp" class="card-img-top" alt="кофемашина bianchi gaia" />
@@ -593,7 +593,7 @@
             </figcaption>
           </figure>
           <div class="card-body">
-            <h3 id="anhcor-gaia-style-ru" class="text-center">
+            <h3 class="text-center">
               Кофемашина
               <br />
               Bianchi Gaia Style
