change cards index

--- a/src/ru/index.html
+++ b/src/ru/index.html
@@ -366,7 +366,7 @@
               </div>
             </div>
           </div>
-          <div class="col-sm-12 col-md-6 col-lg-3">
+          <!-- <div class="col-sm-12 col-md-6 col-lg-3">
             <div class="card text-center">
               <img src="../img/index/icon2.webp" class="card-img-top" alt="icon" />
               <div class="card-body">
@@ -377,7 +377,7 @@
                 </p>
               </div>
             </div>
-          </div>
+          </div> -->
           <div class="col-sm-12 col-md-6 col-lg-3">
             <div class="card text-center">
               <img src="../img/index/icon3.webp" class="card-img-top" alt="icon" />
@@ -402,7 +402,7 @@
               </div>
             </div>
           </div>
-          <!-- <div class="col">
+          <div class="col-sm-12 col-md-6 col-lg-3">
             <div class="card text-center">
               <img src="../img/index/icon5.webp" class="card-img-top" alt="icon" />
               <div class="card-body">
@@ -413,7 +413,7 @@
                 </p>
               </div>
             </div>
-          </div> -->
+          </div>
         </div>
       </div>
     </section>
