--- a/src/ru/arenda.html
+++ b/src/ru/arenda.html
@@ -13,7 +13,7 @@
       Взять кофемашину в аренду для бизнеса бесплатно | Киев, Харьков, Хмельницкий,
       Винница
     </title>
-    <link rel="icon" href="./favicon.png" type="image/x-icon" />
+    <link rel="icon" href="../favicon.png" type="image/x-icon" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
