--- a/src/index.html
+++ b/src/index.html
@@ -534,11 +534,11 @@
     </div>
     <!-- /////////////////////////////////////////   Consultation    ////////////////////////////////////////     -->
     <div class="container consultation">
-      <div class="row">
-        <div class="col">
-          <img src="./img/index/cap.webp" alt="cap" />
+      <div class="row d-flex align-items-center flex-wrap">
+        <div class="col-lg-6">
+          <img src="./img/index/cap.webp" class="img-fluid" alt="cap" />
         </div>
-        <div class="col">
+        <div class="col-lg-6">
           <form class="needs-validation form-main" novalidate>
             <h4 class="green text-center">Безкоштовна консультація нашого спеціаліста</h4>
             <div class="mb-3">
