minor bugs fixed

--- a/src/ru/index.html
+++ b/src/ru/index.html
@@ -341,7 +341,7 @@
             <!-- <h1 class="green text-center">О КОМПАНИИ</h1> -->
             <p class="indent text-wrap text-center">
               Мы — команда профессионалов, работающая на кофейном рынке Украины с 2005
-              года. года. За это время мы получили большой опыт в организации сервиса по
+              года. За это время мы получили большой опыт в организации сервиса по
               продаже горячих напитков. Наша деятельность помогает партнерам удовлетворить
               свои потребности клиентов в этом направлении. Разработанные нами
               оригинальные рецепты узнаваемы потребителями благодаря новейшим вкусам и
@@ -794,7 +794,7 @@
                   Мы доставим и установим кофейное оборудование в удобное для вас время.
                 </li>
                 <li>
-                  • Вы получите полное сервисное обслуживание и поддержку на весь период
+                  Вы получите полное сервисное обслуживание и поддержку на весь период
                   аренды.
                 </li>
               </ol>
