--- a/src/ru/legal_terms.html
+++ b/src/ru/legal_terms.html
@@ -394,7 +394,7 @@
         </p>
         <p class="legal-text-size calc">
           Дополнительно обращаем Ваше внимание, что наша компания не осуществляет
-          непосредственный продажа/прокат/аренда или возврат оборудования и/или товаров
+          непосредственную продажу/прокат/аренду или возврат оборудования и/или товаров
           через сайт
           <a class="select" href="https://bianchiprof.com">https://bianchiprof.com</a>
         </p>
