--- a/src/moloko_shokolad.html
+++ b/src/moloko_shokolad.html
@@ -340,7 +340,7 @@
                 Вони дозволяють отримати стабільну якість та легкість у приготуванні, забезпечуючи ідеальну
                 текстуру та смак молочної пінки або бази для лате та інших кавових коктейлів.</p>
               <p class="lh-sm">
-                <b>Milk Topping</b> підкорить вас своєю кремовою піною та м'яким смаком.
+                <b>Cappuccino Topping</b> підкорить вас своєю кремовою піною та м'яким смаком.
               </p>
               <p class="lh-sm">
                 Підходить для всіх типів кавомашин, які працюють з використанням сухого молока.
