--- a/src/ru/moloko_shokolad.html
+++ b/src/ru/moloko_shokolad.html
@@ -338,7 +338,7 @@
             </figcaption>
           </figure>
           <div class="card-body">
-            <h3 class="text-center">Сухая молочная смесь Bianchi <br /> Milk Topping</h3><br />
+            <h3 class="text-center">Сухая молочная смесь Bianchi <br /> Bianchi Professional</h3><br />
             <small>
               <p class="lh-sm">
                 Молочные сухие смеси – это основа для создания многих любимых кофейных напитков.
@@ -346,7 +346,7 @@
                 текстуру и вкус молочной пенки или базы для латте и других кофейных коктейлей.
               </p>
               <p class="lh-sm">
-                <b>Milk Topping</b> подчинит вас своей кремовой пеной и мягким вкусом.
+                <b>Cappuccino Topping</b> покорит вас своей кремовой пеной и мягким вкусом.
               </p>
               <p class="lh-sm">
                 Подходит для всех типов кофемашин, работающих с использованием сухого молока.
