Изменены телефоны супервайзеров

--- a/src/ru/moloko_shokolad.html
+++ b/src/ru/moloko_shokolad.html
@@ -96,10 +96,14 @@
                     </div> -->
           <div class="header__item col">
             <ul>
-              <li class="telephone text-nowrap">БРОВАРЫ, БОРИСПОЛЬ,</li>
               <li class="telephone text-nowrap">
-                <a class="telephone" href="tel:+380989700921">
-                  ЧЕРНИГОВ (098) 970-09-21
+                <a class="telephone" href="tel:+380735103130">
+                  БРОВАРЫ, БОРИСПОЛЬ (073) 510-31-30
+                </a>
+              </li>
+              <li class="telephone text-nowrap">
+                <a class="telephone" href="tel:+380937909048">
+                  ЧЕРНИГОВ (093) 790-90-48
                 </a>
               </li>
             </ul>
@@ -512,7 +516,7 @@
     <div class="footer-items">
       <div class="container">
         <div class="row">
-          <div class="col-4 p-4 offset-md-1">
+          <div class="col-lg-4 col-6 p-4 offset-md-1">
             <h6>ХОРЕКА</h6>
             <p class="footer-left">
               Установка кофемашин по городам: Харьков, Киев, Белая Церковь, Умань,
@@ -540,9 +544,9 @@
                 </a>
               </div>
               <div class="col footer-left">
-                <h6>Бровары, Борисполь, Чернигов</h6>
-                <a class="telephone text-nowrap" href="tel:+380989700921">
-                  т. +38 (098) 970-09-21
+                <h6>Бровары, Борисполь</h6>
+                <a class="telephone text-nowrap" href="tel:+380735103130">
+                  т. +38 (073) 510-31-30
                 </a>
               </div>
             </div>
@@ -554,15 +558,23 @@
                 </a>
               </div>
               <div class="col footer-left">
-                <h6>Хмельницкий, Тернополь, Шепетовка</h6>
+                <h6>Чернигов</h6>
                 <a class="telephone text-nowrap" href="tel:+380974996005">
                   т. +38 (097) 499-60-05
                 </a>
               </div>
+            </div>
+            <div class="row">
               <div class="col footer-left">
                 <h6>Винница</h6>
                 <a class="telephone text-nowrap" href="tel:+380931322311">
                   т. +38 (093) 132-23-11
+                </a>
+              </div>
+              <div class="col footer-left">
+                <h6>Хмельницкий, Тернополь, Шепетовка</h6>
+                <a class="telephone text-nowrap" href="tel:+380974996005">
+                  т. +38 (097) 499-60-05
                 </a>
               </div>
             </div>
@@ -574,7 +586,7 @@
                             </div>
                         </div> -->
           </div>
-          <div class="col-4 p-4 offset-md-2">
+          <div class="col-lg-4 col-6 p-4 offset-md-2">
             <div class="footer-left">
               <h6>ВЕНДИНГ</h6>
               <p>
@@ -612,7 +624,7 @@
       </div>
     </div>
     <div class="d-flex justify-content-center separator p-1">
-      <h6><small>© 2016-2024 Bianchi professional</small></h6>
+      <h6><small>© 2016-2025 Bianchi professional</small></h6>
     </div>
   </footer>
   <!-- /////////////////////////////////////modal///////////////////////////// -->
