--- a/src/dlya_azs.html
+++ b/src/dlya_azs.html
@@ -94,10 +94,14 @@
                     </div> -->
           <div class="header__item col">
             <ul>
-              <li class="telephone text-nowrap">БРОВАРИ, БОРИСПІЛЬ,</li>
               <li class="telephone text-nowrap">
-                <a class="telephone" href="tel:+380989700921">
-                  ЧЕРНІГІВ (098) 970-09-21
+                <a class="telephone" href="tel:+380735103130">
+                  БРОВАРИ, БОРИСПІЛЬ (073) 510-31-30
+                </a>
+              </li>
+              <li class="telephone text-nowrap">
+                <a class="telephone" href="tel:+380937909048">
+                  ЧЕРНІГІВ (093) 790-90-48
                 </a>
               </li>
             </ul>
@@ -646,7 +650,7 @@
     <div class="footer-items">
       <div class="container">
         <div class="row">
-          <div class="col-4 p-4 offset-md-1">
+          <div class="col-lg-4 col-6 p-4 offset-md-1">
             <h6>ХОРЕКА</h6>
             <p class="footer-left">
               Встановлення кавових машин по містах: Харків, Київ, Рівне, Біла Церква,
@@ -675,9 +679,9 @@
                 </a>
               </div>
               <div class="col footer-left">
-                <h6>Бровари, Бориспіль, Чернігів</h6>
+                <h6>Бровари, Бориспіль</h6>
                 <a class="telephone text-nowrap" href="tel:+380989700921">
-                  т. +38 (098) 970-09-21
+                  т. +38 (073) 510-31-30
                 </a>
               </div>
             </div>
@@ -689,15 +693,21 @@
                 </a>
               </div>
               <div class="col footer-left">
-                <h6>Хмельницький, Тернопіль, Шепетівка</h6>
-                <a class="telephone text-nowrap" href="tel:+380974996005">
-                  т. +38 (097) 499-60-05
+                <h6>Чернігів</h6>
+                <a class="telephone text-nowrap" href="tel:+380937909048">
+                  т. +38 (093) 790-90-48
                 </a>
               </div>
               <div class="col footer-left">
                 <h6>Вінниця</h6>
                 <a class="telephone text-nowrap" href="tel:+380931322311">
                   т. +38 (093) 132-23-11
+                </a>
+              </div>
+              <div class="col footer-left">
+                <h6>Хмельницький, Тернопіль, Шепетівка</h6>
+                <a class="telephone text-nowrap" href="tel:+380974996005">
+                  т. +38 (097) 499-60-05
                 </a>
               </div>
             </div>
@@ -709,7 +719,7 @@
                             </div>
                         </div> -->
           </div>
-          <div class="col-4 p-4 offset-md-2">
+          <div class="col-lg-4 col-6 p-4 offset-md-2">
             <div class="footer-left">
               <h6>ВЕНДІНГ</h6>
               <p>
@@ -747,7 +757,7 @@
       </div>
     </div>
     <div class="d-flex justify-content-center separator p-1">
-      <h6><small>© 2016-2024 Bianchi professional</small></h6>
+      <h6><small>© 2016-2025 Bianchi professional</small></h6>
     </div>
   </footer>
   <!-- /////////////////////////////////////modal///////////////////////////// -->
