Добавлен Ивано-Франковск

--- a/src/zernovoy_kofe.html
+++ b/src/zernovoy_kofe.html
@@ -124,12 +124,12 @@
             <ul>
               <li class="telephone text-nowrap">
                 <a class="telephone text-nowrap" href="tel:+380974996005">
-                  ХМЕЛЬНИЦЬКИЙ, ТЕРНОПІЛЬ (097) 499-60-05
+                  ХМЕЛЬНИЦЬКИЙ, ТЕРНОПІЛЬ, ВІННИЦЯ,
                 </a>
               </li>
               <li class="telephone text-nowrap">
-                <a class="telephone text-nowrap" href="tel:+380931322311">
-                  ВІННИЦЯ (093) 132-23-11
+                <a class="telephone text-nowrap" href="tel:+380974996005">
+                  ІВАНО-ФРАНКІВСЬК (097) 499-60-05
                 </a>
               </li>
             </ul>
@@ -488,7 +488,7 @@
             <p class="footer-left">
               Встановлення кавових машин по містах: Харків, Київ, Рівне, Біла Церква,
               Умань, Бровари, Бориспіль, Чернігів, Черкаси, Хмельницький, Тернопіль,
-              Вінниця, Шепетівка.
+              Вінниця, Івано-Франківськ, Шепетівка.
             </p>
             <div class="row">
               <div class="col col-md-6 footer-left">
@@ -532,13 +532,7 @@
                 </a>
               </div>
               <div class="col footer-left">
-                <h6>Вінниця</h6>
-                <a class="telephone text-nowrap" href="tel:+380931322311">
-                  т. +38 (093) 132-23-11
-                </a>
-              </div>
-              <div class="col footer-left">
-                <h6>Хмельницький, Тернопіль, Шепетівка</h6>
+                <h6>Хмельницький, Тернопіль, Вінниця, Івано-Франківськ, Шепетівка</h6>
                 <a class="telephone text-nowrap" href="tel:+380974996005">
                   т. +38 (097) 499-60-05
                 </a>
