--- a/src/contacty.html
+++ b/src/contacty.html
@@ -125,12 +125,12 @@
             <ul>
               <li class="telephone text-nowrap">
                 <a class="telephone text-nowrap" href="tel:+380974996005">
-                  ХМЕЛЬНИЦЬКИЙ, ТЕРНОПІЛЬ (097) 499-60-05
+                  ХМЕЛЬНИЦЬКИЙ, ТЕРНОПІЛЬ, ВІННИЦЯ,
                 </a>
               </li>
               <li class="telephone text-nowrap">
-                <a class="telephone text-nowrap" href="tel:+380931322311">
-                  ВІННИЦЯ (093) 132-23-11
+                <a class="telephone text-nowrap" href="tel:+380974996005">
+                  ІВАНО-ФРАНКІВСЬК (097) 499-60-05
                 </a>
               </li>
             </ul>
@@ -339,21 +339,14 @@
               </li>
             </ul>
             <div class="container hr-line-contacts"></div>
-            <h6><b>ХМЕЛЬНИЦЬКИЙ, ТЕРНОПІЛЬ, ШЕПЕТІВКА</b></h6>
+            <h6><b>ХМЕЛЬНИЦЬКИЙ, ТЕРНОПІЛЬ, ВІННИЦЯ, ІВАНО-ФРАНКІВСЬК, ШЕПЕТІВКА</b></h6>
             <ul>
               <li class="text-nowrap tel">
                 <i class="bi bi-telephone-fill green"></i>
                 <a href="tel:+380974996005">+38(097) 499-60-05</a>
               </li>
             </ul>
-             <div class="container hr-line-contacts"></div>
-            <h6><b>ВІННИЦЯ</b></h6>
-            <ul>
-              <li class="text-nowrap tel">
-                <i class="bi bi-telephone-fill green"></i>
-                <a href="tel:+380931322311">+38(093) 132-23-11</a>
-              </li>
-            </ul>
+            <div class="container hr-line-contacts"></div>
           </div>
           <div class="col p-5 m-3 mb-5 contacts fill">
             <h5 class="text-center green"><b>ВЕНДІНГ</b></h5>
@@ -448,7 +441,7 @@
               <p class="footer-left">
                 Встановлення кавових машин по містах: Харків, Київ, Рівне, Біла Церква,
                 Умань, Бровари, Бориспіль, Чернігів, Черкаси, Хмельницький, Тернопіль,
-                Вінниця, Шепетівка.
+                Вінниця, Івано-Франківськ, Шепетівка.
               </p>
               <div class="row">
                 <div class="col col-md-6 footer-left">
@@ -492,25 +485,19 @@
                   </a>
                 </div>
                 <div class="col footer-left">
-                  <h6>Вінниця</h6>
-                  <a class="telephone text-nowrap" href="tel:+380931322311">
-                    т. +38 (093) 132-23-11
-                  </a>
-                </div>
-                <div class="col footer-left">
-                  <h6>Хмельницький, Тернопіль, Шепетівка</h6>
+                  <h6>Хмельницький, Тернопіль, Вінниця, Івано-Франківськ, Шепетівка</h6>
                   <a class="telephone text-nowrap" href="tel:+380974996005">
                     т. +38 (097) 499-60-05
                   </a>
                 </div>
               </div>
               <!-- <div class="row">
-                            <div class="col footer-left">
-                                <h6>e-mail</h6>
-                                <a class="telephone text-nowrap"
-                                    href="mailto:vend.coffee@bianchiprof.com">vend.coffee@bianchiprof.com</a>
-                            </div>
-                        </div> -->
+                              <div class="col footer-left">
+                                  <h6>e-mail</h6>
+                                  <a class="telephone text-nowrap"
+                                      href="mailto:vend.coffee@bianchiprof.com">vend.coffee@bianchiprof.com</a>
+                              </div>
+                          </div> -->
             </div>
             <div class="col-lg-4 col-6 p-4 offset-md-2">
               <div class="footer-left">
@@ -550,7 +537,7 @@
         </div>
       </div>
       <div class="d-flex justify-content-center separator p-1">
-        <h6><small>© 2016-2024 Bianchi professional</small></h6>
+        <h6><small>© 2016-2025 Bianchi professional</small></h6>
       </div>
     </footer>
     <!-- /////////////////////////////////////modal///////////////////////////// -->
