--- a/src/ru/legal_terms.html
+++ b/src/ru/legal_terms.html
@@ -116,12 +116,12 @@
             <ul>
               <li class="telephone text-nowrap">
                 <a class="telephone text-nowrap" href="tel:+380974996005">
-                  ХМЕЛЬНИЦКИЙ, ТЕРНОПОЛЬ (097) 499-60-05
+                  ХМЕЛЬНИЦКИЙ, ТЕРНОПОЛЬ, ВИННИЦА,
                 </a>
               </li>
               <li class="telephone text-nowrap">
-                <a class="telephone text-nowrap" href="tel:+380931322311">
-                  ВИННИЦА (093) 132-23-11
+                <a class="telephone text-nowrap" href="tel:+380974996005">
+                  ИВАНО-ФРАНКОВСК (097) 499-60-05
                 </a>
               </li>
             </ul>
@@ -537,7 +537,7 @@
             <h6>ХОРЕКА</h6>
             <p class="footer-left">
               Установка кофемашин по городам: Харьков, Киев, Белая Церковь, Умань,
-              Бровары, Борисполь, Черкассы, Хмельницкий, Тернополь, Шепетовка, Винница
+              Бровары, Борисполь, Черкассы, Хмельницкий, Тернополь, Ивано-Франковск, Винница, Шепетовка
             </p>
             <div class="row">
               <div class="col col-md-6 footer-left">
@@ -583,13 +583,7 @@
             </div>
             <div class="row">
               <div class="col footer-left">
-                <h6>Винница</h6>
-                <a class="telephone text-nowrap" href="tel:+380931322311">
-                  т. +38 (093) 132-23-11
-                </a>
-              </div>
-              <div class="col footer-left">
-                <h6>Хмельницкий, Тернополь, Шепетовка</h6>
+                <h6>Хмельницкий, Тернополь, Винница, Ивано-Франковск, Шепетовка</h6>
                 <a class="telephone text-nowrap" href="tel:+380974996005">
                   т. +38 (097) 499-60-05
                 </a>
